--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <div class="wrapper">
         <header class="Welcome">
             <div class="logo">
-                <span>Tähdet</span>
-                <br> ja Avaruus
+                <a href="index.html">
+                    <span>Tähdet</span>
+                    <br> ja Avaruus
+                </a> 
             
             </div>
             <div class="slogan">Pohjoismaiden suurin tähtitiedelehti</div>
