--- a/foorumi.html
+++ b/foorumi.html
@@ -4,28 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Tähdet ja Avaruus - Foorumi</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="wrapper">
-    <header class="Welcome">
-    <div class="logo">
-            <a href="index.html">
-                    <span>Tähdet</span>
-                    <br> ja Avaruus
-                </a> 
+        <div class="wrapper">
+            <header class="Welcome">
+                <div class="logo">
+                        <a href="index.html">
+                                <span>Tähdet</span>
+                                <br> ja Avaruus
+                            </a> 
 
-    </div>
-    <div class="slogan">Pohjoismaiden suurin tähtitiedelehti</div>
-    </header>
+                </div>
+                <div class="slogan">Pohjoismaiden suurin tähtitiedelehti</div>
+            </header>
 
-    <nav class="sticky-nav">
-    <a href="index.html">ETUSIVU</a>
-    <a href="lehti.html">LEHTI</a>
-    <a href="foorumi.html">FOORUMI</a>
-    <a href="Verkkokauppa.html">VERKKOKAUPPA</a>
-    </nav> 
-    <div class="ruumis"></div>
+                <nav class="sticky-nav">
+                    <a href="index.html">ETUSIVU</a>
+                    <a href="lehti.html">LEHTI</a>
+                    <a href="foorumi.html">FOORUMI</a>
+                    <a href="Verkkokauppa.html">VERKKOKAUPPA</a>
+                </nav> 
+
+                <div class="ruumis">
+            <div class="main">
+                <div class="Nasa1 all-nasa"> 
+                    <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                    <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
+                    <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                    <br><br>                     Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
+                    </p>
+                </div>
+                <div class="Nasa2 all-nasa">
+                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+   
+                    <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
+                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                        </p>
+                </div>
+                <div class="Nasa3 all-nasa">
+                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                        <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
+                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                        </p>
+                </div>
+                <div class="Nasa4 all-nasa">
+                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                        <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
+                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                        </p>
+                </div>
+                <div class="Nasa5 all-nasa">
+                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                        <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
+                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                        </p>
+                </div>
+                <div class="Nasa6 all-nasa">
+                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                        <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
+                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                            <br><br>
+                         Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
+                        </p>
+                </div>
+            </div>
+        </div>
+
 </body>
 </html>
