--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
         <div class="ruumis">
             <div class="main">
                 <div class="Nasa1 all-nasa"> 
-                    <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                    <a class="artikkeli" href="ARTIKKELI 1.html">
+                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
                     <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
                     <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
                     <br><br>                     Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
                     </p>
+                    </a>
                 </div>
                 <div class="Nasa2 all-nasa">
                         <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
@@ -68,8 +70,6 @@
                          Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
                         </p>
                 </div>
-
-
             </div>
         </div>
         <div class="footer">
