--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <div class="Nasa1 all-nasa"> 
                     <a class="artikkeli" href="ARTIKKELI 1.html">
                         <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                    <div class></div>
                     <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
                     <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
                     <br><br>                     Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
