--- a/foorumi.html
+++ b/foorumi.html
@@ -28,48 +28,49 @@
                 </nav> 
 
 
-<!--
-                <div class="ruumis">
-            <div class="main">
-                <div class="Nasa1 all-nasa"> 
-                    <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-                    <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                    <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                    <br><br>                     Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
-                    </p>
-                </div>
-                <div class="Nasa2 all-nasa">
-                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-   
-                    <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                        </p>
-                </div>
-                <div class="Nasa3 all-nasa">
+
+                <div class="ruumis"></div>
+  <!--                  
+                <div class="main">
+                    <div class="Nasa1 all-nasa"> 
                         <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
                         <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
                         <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                        <br><br>                     Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
                         </p>
-                </div>
-                <div class="Nasa4 all-nasa">
-                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                    </div>
+                    <div class="Nasa2 all-nasa">
+                            <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+    
                         <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                        </p>
-                </div>
-                <div class="Nasa5 all-nasa">
-                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-                        <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                        </p>
-                </div>
-                <div class="Nasa6 all-nasa">
-                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-                        <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                            <br><br>
-                         Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
-                        </p>
+                            <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                            </p>
+                    </div>
+                    <div class="Nasa3 all-nasa">
+                            <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                            <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
+                            <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                            </p>
+                    </div>
+                    <div class="Nasa4 all-nasa">
+                            <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                            <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
+                            <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                            </p>
+                    </div>
+                    <div class="Nasa5 all-nasa">
+                            <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                            <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
+                            <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                            </p>
+                    </div>
+                    <div class="Nasa6 all-nasa">
+                            <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                            <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
+                            <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                                <br><br>
+                            Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
+                            </p>
                 </div>
             </div>
         </div>
