--- a/foorumi.html
+++ b/foorumi.html
@@ -7,7 +7,7 @@
     <title>Tähdet ja Avaruus - Foorumi</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+    <body>
         <div class="wrapper">
             <header class="Welcome">
                 <div class="logo">
@@ -15,66 +15,23 @@
                                 <span>Tähdet</span>
                                 <br> ja Avaruus
                             </a> 
-
                 </div>
-                <div class="slogan">Pohjoismaiden suurin tähtitiedelehti</div>
+                <div class="slogan">
+                    Pohjoismaiden suurin tähtitiedelehti
+                </div>
             </header>
-
-                <nav class="sticky-nav">
-                    <a href="index.html">ETUSIVU</a>
-                    <a href="lehti.html">LEHTI</a>
-                    <a href="foorumi.html">FOORUMI</a>
-                    <a href="Verkkokauppa.html">VERKKOKAUPPA</a>
-                </nav> 
-
-
-
-                <div class="ruumis"></div>
-  <!--                  
-                <div class="main">
-                    <div class="Nasa1 all-nasa"> 
-                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-                        <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                        <br><br>                     Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
-                        </p>
-                    </div>
-                    <div class="Nasa2 all-nasa">
-                            <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-    
-                        <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                            <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                            </p>
-                    </div>
-                    <div class="Nasa3 all-nasa">
-                            <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-                            <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                            <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                            </p>
-                    </div>
-                    <div class="Nasa4 all-nasa">
-                            <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-                            <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                            <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                            </p>
-                    </div>
-                    <div class="Nasa5 all-nasa">
-                            <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-                            <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                            <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                            </p>
-                    </div>
-                    <div class="Nasa6 all-nasa">
-                            <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-                            <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                            <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                                <br><br>
-                            Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
-                            </p>
+            <nav class="sticky-nav">
+                <a href="index.html">ETUSIVU</a>
+                <a href="lehti.html">LEHTI</a>
+                <a href="foorumi.html">FOORUMI</a>
+                <a href="Verkkokauppa.html">VERKKOKAUPPA</a>
+            </nav> 
+            <div class="ruumis">
+                <div class="youtube">
+                    <iframe width="960" height="515" src="https://www.youtube.com/embed/4993sBLAzGA" frameborder="0" allow="accelerometer; autoplay "0"; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-            </div>
         </div>
-        -->
-
-</body>
+            >
+        </div>
+    </body>
 </html>
