--- a/index.html
+++ b/index.html
@@ -31,54 +31,69 @@
                 <div class="Nasa1 all-nasa"> 
                     <a class="artikkeli" href="ARTIKKELI 1.html">
                         <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-                    <div class></div>
-                    <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                    <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                    <br><br>                     Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
-                    </p>
+                        <h4>
+                            SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina
+                        </h4>
+                        <p>
+                            Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                        <br>
+                        <br>   
+                            Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
+                        </p>
                     </a>
                 </div>
                 <div class="Nasa2 all-nasa">
-                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                    <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
    
-                    <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                        </p>
+                    <h4>
+                        SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina
+                    </h4>
+                    <p>
+                        Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                    </p>
                 </div>
                 <div class="Nasa3 all-nasa">
-                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-                        <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                        </p>
+                    <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                    <h4>
+                        SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina
+                    </h4>
+                    <p>
+                        Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                    </p>
                 </div>
                 <div class="Nasa4 all-nasa">
-                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-                        <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                        </p>
+                    <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                    <h4>
+                        SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina
+                    </h4>
+                    <p>
+                        Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                    </p>
                 </div>
                 <div class="Nasa5 all-nasa">
-                        <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-                        <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                        </p>
+                    <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
+                    <h4>
+                        SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina
+                    </h4>
+                    <p>
+                        Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                    </p>
                 </div>
                 <div class="Nasa6 all-nasa">
                         <img class="frontpic" src="img/SPACE-X.jpg" alt="space">
-                        <h4>SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina</h4>
-                        <p>Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
-                            <br><br>
-                         Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
+                        <h4>
+                            SpaceX-yhtiön Dragon 2 -alus laukaistaan ensilennolleen lauantaina
+                        </h4>
+                        <p>
+                            Ensimmäinen Yhdysvaltojen seuraavan sukupolven avaruusaluksista lentää näillä näkymin ensitestinsä miehittämättömänä.
+                        <br>
+                        <br>
+                            Dragon 2 -aluksen laukaisun on määrä koittaa lauantaina kello 9.49 Suomen aikaa. Falcon 9 -kantoraketin kyytiin kiinnitetty alus odottaa jo laukaisualustallaan.
                         </p>
                 </div>
             </div>
         </div>
-        <div class="footer">
-
-        </div>
-
+        <div class="footer"></div>
     </div>
-
-
 </body>
 </html>
